# localvibe

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
profiles/: example.yaml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  store.rs
src-tauri/src/templates/: mod.rs  schema.rs
src/components/: Launcher.tsx  TemplateEditor.tsx  TerminalPane.tsx  WorkspaceLayout.tsx
src/hooks/: usePty.ts
src/styles/: global.css  launcher.css  workspace.css
src/types/: template.ts
templates/: fullstack-dev.yaml  monorepo.yaml  vibe-coding.yaml
