[package]
name = "local-vibe"
version = "0.1.0"
description = "Terminal workspace manager for vibe coding"
authors = ["Local Vibe Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "local_vibe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-pty = "0.3"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "6"
thiserror = "2"
which = "7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
